<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/back"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_write_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="16dp" />

    <EditText
        android:id="@+id/second_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_write_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_name_input" />

    <EditText
        android:id="@+id/nickname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/second_name_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_write_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_name_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_email_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_name_input" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_phone_focused"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_name_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/phone_input">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_input"
        android:background="@drawable/custom_round_border"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_name_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/round_bg"
        android:text="@string/sign_up"
        android:textColor="@color/textButtonColor"
        android:textSize="20dp"
        tools:ignore="MissingConstraints" />

</RelativeLayout>